--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,49 +1,66 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>Registro de Producto</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-        <style>
-            .card{
-                border: none;
-                box-shadow: 0 4px 16px rgba(0,0,0,0.3);
-                transition: all 0.3s ease;
-                border-radius: 1rem;
-                padding: 2rem;
-            }
-            .card:hover{
-                box-shadow: 0 4 18px rgba(0,0,0,0.3);
-                transform: translateY(-2px);
-            }
-        </style>
-    </head>
-    <body>
-        <div class="container mt-5">
-            <div class="row justify-content-center">
-                <div class="col-6">
-                    <h1 class="text-center mb-4">Inicio Sesion</h1>
-                    <form th:action="@{/register}" th:object="${user}"  method="post" class="card p-4">
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <div class="form-floating">
-                                    <input type="text" id="name" th:field="*{name}" class="form-control" required>
-                                    <label for="name" class="form-label">Nombre de Usuario</label>
-                                </div> 
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <div class="form-floating">
-                                    <input type="text" id="password" th:field="*{password}" class="form-control" required>
-                                    <label for="password" class="form-label">Contraseña</label>
-                                </div> 
-                            </div>
-                        </div>
-                        <div class="text-center">
-                            <button type="submit" class="btn btn-primary w-100">Registrar</button>
-                        </div>
 
-                    </form>
-                </div>
+<head>
+    <title>Registro de Producto</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+</head>
+
+<body>
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <h1 class="text-center mb-4">Registro Evento de Running</h1>
+                <form th:action="@{/register}" th:object="${user}" method="post" class="card p-4 rounded-3">
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <div class="form-floating mb-3">
+                                <input type="text" id="name" th:field="*{name}" class="form-control" required>
+                                <label for="name" class="form-label">Nombre y apellidos</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="number" id="dni" th:field="*{dni}" class="form-control" required>
+                                <label for="dni" class="form-label">Dni de Usuario</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="text" id="residencia" th:field="*{residencia}" class="form-control"
+                                    required>
+                                <label for="residencia" class="form-label">Lugar de Residencia</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="tel" id="telefonoEmergencia" th:field="*{telefonoEmergencia}"
+                                    class="form-control" required>
+                                <label for="telefonoEmergencia" class="form-label">Telefono de Emergencia</label>
+                            </div>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <div class="form-floating mb-3">
+                                <input type="tel" id="telefonoPersonal" th:field="*{telefonoPersonal}" class="form-control" required>
+                                <label for="telefonoPersonal" class="form-label">Telefono Personal</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="text" id="tipoSangre" th:field="*{tipoSangre}" class="form-control" required>
+                                <label for="tipoSangre" class="form-label">Tipo de Sangre</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="text" id="alergia" th:field="*{alergia}" class="form-control" required>
+                                <label for="alergia" class="form-label">Alergias</label>
+                            </div>
+                            <div class="form-floating mb-3">
+                                <input type="text" id="kmRecorrer" th:field="*{kmRecorrer}" class="form-control" required>
+                                <label for="kmRecorrer" class="form-label">Numero de kilometro a Correr</label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary w-100">Registrar</button>
+                    </div>
+
+                </form>
             </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
