--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -1,35 +1,70 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>Registro Exitoso</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-        <style>
-            .card{
-                border: none;
-                box-shadow: 0 4px 16px rgba(0,0,0,0.3);
-                transition: all 0.3s ease;
-                border-radius: 1rem;
-                padding: 3rem;
-            }
-            .card:hover{
-                box-shadow: 0 4 18px rgba(0,0,0,0.3);
-                transform: translateY(-2px);
-            }
-        </style>
-    </head>
-    <body>
-        <div class="container mt-5">
-            <div class="row justify-content-center">
-                <div class="col-6">
-                    <div class="card">
-                        <h2 class="text-center">Bienvenido</h2>
-                        <div class="card-body">
-                            <p><strong>Nombre:</strong> <span th:text="${user.name}"></span></p> 
-                          </div>
-                    </div> 
+<head>
+    <title>Registro Exitoso</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+</head>
+
+<body>
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-6">
+                <div class="card">
+                    <h4 class="text-center mt-5">Su participacion Fue registrado</h4>
+                    <p class="text-center">Detalles de su Registro</p>
+
+                    <div th:object="${user}" class="p-4">
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <div class="form-floating mb-3">
+                                    <input type="text" id="name" th:value="*{name}" class="form-control" readonly>
+                                    <label for="name" class="form-label">Nombre y apellidos</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input type="number" id="dni" th:value="*{dni}" class="form-control" readonly>
+                                    <label for="dni" class="form-label">Dni de Usuario</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input type="text" id="residencia" th:value="*{residencia}" class="form-control"
+                                        readonly>
+                                    <label for="residencia" class="form-label">Lugar de Residencia</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input type="tel" id="telefonoEmergencia" th:value="*{telefonoEmergencia}"
+                                        class="form-control" readonly>
+                                    <label for="telefonoEmergencia" class="form-label">Telefono de Emergencia</label>
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <div class="form-floating mb-3">
+                                    <input type="tel" id="telefonoPersonal" th:value="*{telefonoPersonal}"
+                                        class="form-control" readonly>
+                                    <label for="telefonoPersonal" class="form-label">Telefono Personal</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input type="text" id="tipoSangre" th:value="*{tipoSangre}" class="form-control"
+                                        readonly>
+                                    <label for="tipoSangre" class="form-label">Tipo de Sangre</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input type="text" id="alergia" th:value="*{alergia}" class="form-control" readonly>
+                                    <label for="alergia" class="form-label">Alergias</label>
+                                </div>
+                                <div class="form-floating mb-3">
+                                    <input type="text" id="kmRecorrer" th:value="*{kmRecorrer}" class="form-control"
+                                        readonly>
+                                    <label for="kmRecorrer" class="form-label">Numero de kilometro a Correr</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
-    </body>
+    </div>
+</body>
+
 </html>
